<resources>
    <string name="search_hint">Search Career Goal</string>
    <string name="title_activity_search">Search Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="default_status">I\'m using career goal setting app</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="member">Already a member? Login</string>
    <string name="create_account">Create Account</string>
    <string name="password_register">Password</string>
    <string name="email_register">Email</string>
    <string name="name_register">Name</string>
    <string name="app_name">Career Goal App</string>
</resources>
